fix: 새로운 설계를 위해 전환점을 저장